@@ -1,5 +1,9 @@
-ChangeLog from 0.6 to 1.0:
+ChangeLog from 0.6 to 1.3:
+- Added: Logging functionality, now logs all Responder activity to a file with date and time.
+- Added: Print IP address to stdout for each protocol 
+- Improvement: Added new line on Writedata (atucom)
 - Improvement: final Hash is now printed to stdout instead of NT and LM 
+- Fix: Fixed spelling in README (atucom)
 - Fix: Removed hardcoded challenge for SQL NTLM
 - Fix: Removed hardcoded challenge for HTTP NTLM
 - Added an HTTP server with support for ntlmv1/v2 and basic Auth.
